# Zero

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  test.bat  test.sh
include/Engine/: Application.h  ApplicationEvent.h  ConfigSystem.h  Core.h  EntryPoint.h  Event.h  EventDispatcher.h  Export.h  KeyEvent.h  Layer.h  Log.h  MouseEvent.h  Platform.h  Ref.h  Time.h  Window.h
include/Engine/File/: FileStream.h  FileSystem.h  FileWatcher.h
include/Engine/Graphics/: BufferUsage.h  GraphicsTypes.h  ImGuiFrame.h  ImageDesc.h  MemoryDomain.h  PipelineDesc.h  RenderInterface.h  RenderResources.h  ResourceHandle.h  VertexLayout.h
include/Engine/IO/: IOCommon.h  IODescriptors.h  IOMapping.h  IOScheduler.h
include/Engine/IO/Platform/: IOPlatform.h
include/Engine/Input/: Input.h  KeyCode.h  MouseButton.h
include/Engine/JobSystem/: Job.h  JobCounter.h  JobSystem.h
include/Engine/Layers/: ImGuiLayer.h
include/Engine/Math/: AABB.h  Fustrum.h  Mat3.h  Mat4.h  Plane.h  Vec3.h  Vec4.h
include/Engine/Physics/: PhysicsSystemAPI.h  PhysicsTypes.h
include/Engine/Profiler/: Profiler.h
include/Engine/Scene/: Scene.h  SceneManager.h  SceneTypes.h
include/Engine/Thread/: ConditionVariable.h  Mutex.h  RecursiveMutex.h  ScopedLock.h  Semaphore.h  Thread.h  ThreadPriority.h
src/: pch.h
src/Core/: Application.cpp  ConfigSystem.cpp  Input.cpp  Log.cpp  Ref.cpp  Time.cpp  Window.cpp
src/Events/: Event.cpp  EventDispatcher.cpp
src/File/: FileStream.cpp  FileSystem.cpp  FileWatcher.cpp
src/Graphics/BackendFactory/: GraphicsBackendFactory.cpp  GraphicsBackendFactory.h
src/Graphics/Renderer/: RenderInterface.cpp  RenderInterfaceImpl.h  Renderer.cpp  Renderer.h
src/Graphics/Renderer/core/: Framequeue.cpp  Framequeue.h
src/Graphics/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  SlangManager.cpp  SlangManager.h
src/Graphics/backend/OpenGL/: OpenGLBuffer.h  OpenGLDevice.cpp  OpenGLDevice.h
src/Graphics/backend/OpenGL/Buffer/: OpenGLBuffer.cpp  OpenGLBuffer.h
src/Graphics/backend/OpenGL/Debug/: OpenGLDebug.cpp  OpenGLDebug.h
src/Graphics/backend/OpenGL/Translator/: OpenGLTranslator.h
src/Graphics/backend/Vulkan/: ShaderModule.cpp  ShaderModule.h  ShaderProgram.cpp  ShaderProgram.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandContext.cpp  VulkanCommandContext.h  VulkanContext.cpp  VulkanContext.h  VulkanDebug.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanMemoryAllocator.cpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h
src/Graphics/backend/Vulkan/Buffer/: VulkanBuffer.cpp  VulkanBuffer.h
src/Graphics/backend/Vulkan/Debug/: VulkanDebug.cpp  VulkanDebug.h
src/Graphics/backend/Vulkan/Pipeline/: VulkanPipeline.cpp
src/Graphics/backend/Vulkan/Translator/: VulkanTranslator.h
src/Graphics/backend/Vulkan/VMA/: VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h
src/Graphics/core/: Buffer.h  BufferDesc.h  FrameData.h  GraphicsCore.h  GraphicsDevice.h  ImGuiFrame.cpp  RHITypes.h  ResourceRegistry.h  UploadRequest.h
src/IO/: IOMapping.cpp  IOScheduler.cpp
src/IO/Platform/: IOPlatform_Linux.cpp  IOPlatform_Win32.cpp  IOPlatform_macOS.cpp
src/JobSystem/: BlockingThreadPool.cpp  BlockingThreadPool.h  JobCounter.cpp  JobCounterPool.cpp  JobCounterPool.h  JobSystem.cpp
src/Layers/: ImGuiLayer.cpp  LayerStack.cpp  LayerStack.h
src/Math/: Vec3.cpp  Vec4.cpp
src/Platform/: InputInternal.h  WindowImpl.cpp  WindowImpl.h
src/Platform/GLFW/: GLFWWindowImpl.cpp  GLFWWindowImpl.h
src/Scene/: Scene.cpp  SceneCommand.h  SceneData.h  SceneManager.cpp
src/Thread/: PlatformThread.h  Thread.cpp
src/Thread/Platform/: Thread_Fallback.cpp  Thread_Linux.cpp  Thread_Mac.cpp  Thread_Win32.cpp
tests/: CMakeLists.txt  TestFileStream.cpp  TestFileSystem.cpp  TestIOAsyncVolume.cpp  TestIOMapping.cpp  TestIOPlatform.cpp  TestIOScheduler.cpp  TestIOSubmission.cpp  TestRef.cpp  TestThreadPrimitives.cpp
